--- a/main/index.html
+++ b/main/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
     <head>
-        <title>ESP32 Сервак</title>
+        <title>ESP32 Server</title>
         <style>
             body {
                 font-size: 3rem;
@@ -34,7 +34,7 @@
         </style>
     </head>
     <body>
-        <div class="hdr">ESP32 Сервак</div>
+        <div class="hdr">ESP32 Server</div>
         <div>LED is <span id='led' class="%s">%s</span></div>
         <div>
             <button class="btn" onclick="led_on()">ON</button>
