--- a/main/index.html
+++ b/main/index.html
@@ -25,17 +25,17 @@
             }
             .btn {
                 width: 30%;
-                /* font-size: 4rem; */
+                font-size: 4rem;
             }
             .btnw {
                 width: 60%;
-                /* font-size: 4rem; */
+                font-size: 4rem;
             }
         </style>
     </head>
     <body>
         <div class="hdr">ESP32 Server</div>
-        <div>LED is <span id='led' class="%s">%s</span></div>
+        <div>LED is <span id='led' class="CCC">TTT</span></div>
         <div>
             <button class="btn" onclick="led_on()">ON</button>
             <button class="btn" onclick="led_off()">OFF</button>
@@ -58,29 +58,29 @@
                     } else {
                         led.className = "unk";
                         led.innerText = "?";
-                    }
+                    };
                     return;
                 } else {
                     alert("Status : " + this.statusText);
                     return;
                 }
-            }
+            };
             alert("Not ready");
-        }
+        };
         function led_on() {
             const req = new XMLHttpRequest();
             req.open("GET", "/led_on", true);
             req.onload = led_answer;
             req.onerror = (e) => { alert("Error : " + req.statusText); };
             req.send();
-        }
+        };
         function led_off() {
             const req = new XMLHttpRequest();
             req.open("GET", "/led_off", true);
             req.onload = led_answer;
             req.onerror = (e) => { alert("Error : " + req.statusText); };
             req.send();
-        }
+        };
         function send() {
             const req = new XMLHttpRequest();
             req.open("GET", "/send");
@@ -92,10 +92,10 @@
                     } else {
                         alert("Status : " + this.statusText);
                         return;
-                    }
-                }
+                    };
+                };
                 alert("Not ready");
-            }
+            };
             req.onerror = (e) => { alert("Error : " + req.statusText); };
             req.send();
         }
